getLast doesnt work ...